--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: tessera
 Type: Package
 Title: Model The Effect Of Aneuploidy On Embryo Biopsies
 Version: 0.1.0
-Author: Ben Skinner
+Author: Ben Skinner <b.skinner@essex.ac.uk>
 Maintainer: Ben Skinner <b.skinner@essex.ac.uk>
 Description: Generates a virtual embryo and visualises
     all possible biopsies of a given size.
-License: GPL3
+License: use_gpl3_license()
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
