--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Ben Skinner <b.skinner@essex.ac.uk>
 Maintainer: Ben Skinner <b.skinner@essex.ac.uk>
 Description: Generates a virtual embryo and visualises
     all possible biopsies of a given size.
-License: use_gpl3_license()
+License: GPL3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
