--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tessera
 Type: Package
 Title: Model The Effect Of Aneuploidy On Embryo Biopsies
-Version: 0.2.0
+Version: 0.3.0
 Author: Ben Skinner <b.skinner@essex.ac.uk>
 Maintainer: Ben Skinner <b.skinner@essex.ac.uk>
 Description: Generates a virtual embryo and visualises
@@ -14,7 +14,8 @@ Imports:
     shiny,
     shinythemes,
     dplyr,
-    plotly
+    plotly,
+    magrittr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
