Fix issues with namespaces

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,6 @@ export(takeAllBiopsies)
 export(takeBiopsy)
 exportClasses(Embryo)
 import(ggplot2)
-import(plotly)
+import(plotly, except = "last_plot")
 import(shiny)
 import(shinythemes)
