Fix linter issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,14 @@
 
 export(Embryo)
 export(countAneuploidCells)
+export(countChromosomes)
 export(getNeighbouringCellIndexes)
 export(runTessera)
 export(takeAllBiopsies)
 export(takeBiopsy)
 exportClasses(Embryo)
+exportMethods(length)
+exportMethods(plot)
 import(ggplot2)
 import(plotly, except = "last_plot")
 import(shiny)
