--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,12 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
 Imports:
-    shiny,
-    shinythemes,
     dplyr,
+    ggplot2,
+    methods,
     plotly,
-    magrittr
+    shiny,
+    shinythemes
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
