--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,5 @@ import(ggplot2)
 import(plotly, except = "last_plot")
 import(shiny)
 import(shinythemes)
+importFrom(stats,rnorm)
+importFrom(utils,head)
